# backend/src/routes/appointments.routes.ts
@@ -4,7 +4,7 @@ import {
   getMyAppointments,
   getAppointmentsForVet
 } from '../controllers/appointments.controller';
-import { updateAppointmentStatus } from '../controllers/appointments.controller';
+import { updateAppointmentTime, cancelAppointment } from '../controllers/appointments.controller';
 import { verifyToken } from '../middlewares/verifyToken';
 import { checkRole } from '../middlewares/checkRole';
 import { idempotencyMiddleware } from '../middlewares/idempotency';
@@ -14,6 +14,7 @@ const router = Router();
 router.post('/', verifyToken, checkRole('OWNER'), idempotencyMiddleware, createAppointment);
 router.get('/', verifyToken, checkRole('OWNER'), getMyAppointments);
 router.get('/vet', verifyToken, checkRole('VET'), getAppointmentsForVet);
-router.patch('/:id/status', verifyToken, updateAppointmentStatus);
+router.patch('/:id', verifyToken, updateAppointmentTime);
+router.patch('/:id/cancel', verifyToken, cancelAppointment);
 
 export default router;
